added raddixSort and some more visuals

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
     </div>
     <div class="buttons">
         <button onclick="fill()">New queries</button>
-        <button onclick="countSort()">Count sort</button>
-        <button onclick="selectionSort()">Selection sort</button>
-        <button onclick="insertionSort()">Insertion sort</button>
+        <button onclick="countSort()">Count Sort</button>
+        <button onclick="selectionSort()">Selection Sort</button>
+        <button onclick="insertionSort()">Insertion Sort</button>
         <button onclick="quickSort()">Quick Sort</button>
         <button onclick="bubbleSort()">Bubble Sort</button>
         <button onclick="mergeSort()">Merge Sort</button>
         <button onclick="sbkaSort()">Sbka Sort</button>
+        <button onclick="raddixSort()">Raddix Sort</button>
         <button onclick="deSort()">De Sort</button>
     </div>
 </body>
